fix: Remove icon prop from sections (non-links),move tooltip target to fix a11y bug, and address PR comments -  refactor unit tests,  remove duplicate collapsed and symmetric classes

--- a/src/side-navigation/styles.scss
+++ b/src/side-navigation/styles.scss
@@ -120,10 +120,6 @@ $expandable-icon-negative-margin: awsui.$space-l;
     margin-block-start: 0;
   }
 
-  &--symmetric {
-    padding-inline-start: calc(#{awsui.$space-panel-side-right} - #{$item-padding-inline});
-  }
-
   &--collapsed {
     padding-inline-start: 0;
     padding-inline-end: 0;
@@ -281,10 +277,6 @@ $expandable-icon-negative-margin: awsui.$space-l;
   display: flex;
   align-items: center;
   margin-block: 0;
-}
-
-.section-header-text {
-  display: inline-flex;
 }
 
 // ==========================================================================
